# Protocols

./: CMakeLists.txt  LICENSE
cmake/: CMakeLists.txt
cmake/msvc/: CMakeLists.txt
cmake/standard/: CMakeLists.txt
include/: Protocols.h
include/Protocols/: defs.h
include/Protocols/I2c/: I2cBus.hpp  I2cConnectionSettings.hpp  I2cDevice.hpp
src/: CMakeLists.txt  I2cConnectionSettings.cpp  I2cDevice.cpp
src/common/: CMakeLists.txt  defs.c
src/darwin/: I2cBus.cpp
src/freebsd/: I2cBus.cpp
src/linux/: I2cBus.cpp
src/macos/: CMakeLists.txt
src/unix/: CMakeLists.txt  I2cBus.cpp
src/windows/: I2cBus.cpp
